percent-routing/back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
  labels:
    app: back
    app.kubernetes.io/component: back
    app.kubernetes.io/instance: back
    app.kubernetes.io/name: back
    app.kubernetes.io/part-of: back
  name: back
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: back
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: back
        deployment: back
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/gotest/smgoapp:latest
        imagePullPolicy: Always
        name: back
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
